<!--

    Copyright 2017 Systems Research Group, University of St Andrews:
    <https://github.com/stacs-srg>

    This file is part of the module population_model.

    population_model is free software: you can redistribute it and/or modify it under the terms of the GNU General Public
    License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later
    version.

    population_model is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied
    warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.

    You should have received a copy of the GNU General Public License along with population_model. If not, see
    <http://www.gnu.org/licenses/>.

-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>uk.ac.standrews.cs</groupId>
        <artifactId>common-pom</artifactId>
        <version>3.0-SNAPSHOT</version>
    </parent>

    <artifactId>population-model</artifactId>
    <version>4.0-SNAPSHOT</version>
    <packaging>jar</packaging>
    <name>population-model</name>

    <build>
        <plugins>
            <plugin>
            <artifactId>maven-assembly-plugin</artifactId>
            <configuration>
                <archive>
                <manifest>
                    <mainClass>uk.ac.standrews.cs.valipop.implementations.CL_OBDModel</mainClass>
                </manifest>
                </archive>
                <descriptorRefs>
                <descriptorRef>jar-with-dependencies</descriptorRef>
                </descriptorRefs>
            </configuration>
            </plugin>
        </plugins>
    </build>


    <repositories>
        <repository>
            <id>uk.ac.standrews.cs.maven.repository</id>
            <name>School of Computer Science Maven Repository</name>
            <url>https://maven.cs.st-andrews.ac.uk/</url>
        </repository>
    </repositories>

    <properties>
        <repository.type>github</repository.type>
        <repository.location>https://github.com/stacs-srg/valipop</repository.location>
        <jdk.version>21</jdk.version>
        <maven.compiler.source>${jdk.version}</maven.compiler.source>
        <maven.compiler.target>${jdk.version}</maven.compiler.target>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.apache.spark</groupId>
            <artifactId>spark-core_2.12</artifactId>
            <version>3.5.3</version>
        </dependency>

        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-api</artifactId>
            <version>2.17.1</version>
        </dependency>

        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>2.17.1</version>
        </dependency>

        <dependency>
            <groupId>uk.ac.standrews.cs.digitising_scotland</groupId>
            <artifactId>util</artifactId>
            <version>1.0-SNAPSHOT</version>
        </dependency>

        <dependency>
            <groupId>uk.ac.standrews.cs</groupId>
            <artifactId>common-test</artifactId>
            <version>2.0-SNAPSHOT</version>
        </dependency>

        <dependency>
            <groupId>org.gedcom4j</groupId>
            <artifactId>gedcom4j</artifactId>
            <version>2.1.8</version>
        </dependency>

        <dependency>
            <groupId>mysql</groupId>
            <artifactId>mysql-connector-java</artifactId>
            <version>8.0.28</version>
        </dependency>

        <dependency>
            <groupId>com.github.stacs-srg</groupId>
            <artifactId>ciesvium</artifactId>
            <version>1.0.0</version>
        </dependency>

        <dependency>
            <groupId>com.google.code.findbugs</groupId>
            <artifactId>findbugs</artifactId>
            <version>2.0.1</version>
        </dependency>

        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-math3</artifactId>
            <version>3.1</version>
        </dependency>

        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-annotations</artifactId>
            <version>2.14.2</version>
        </dependency>

        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.12.7.1</version>
        </dependency>

        <dependency>
            <groupId>com.fasterxml.jackson.dataformat</groupId>
            <artifactId>jackson-dataformat-xml</artifactId>
            <version>2.14.2</version>
        </dependency>

        <dependency>
            <groupId>com.github.stacs-srg</groupId>
            <artifactId>utilities</artifactId>
            <version>1.0.0</version>
        </dependency>

    </dependencies>

    <developers>

        <developer>
            <id/>
            <name>Tom Dalton</name>
            <email>tsd4@st-andrews.ac.uk</email>
            <organization>Formerly University of St Andrews</organization>
            <organizationUrl>https://www.st-andrews.ac.uk/</organizationUrl>
            <roles>
                <role>Developer</role>
            </roles>
        </developer>

        <developer>
            <id/>
            <name>Alan Dearle</name>
            <email>alan.dearle@st-andrews.ac.uk</email>
            <url>https://al.host.cs.st-andrews.ac.uk/</url>
            <organization>University of St Andrews</organization>
            <organizationUrl>https://www.st-andrews.ac.uk/</organizationUrl>
            <roles>
                <role>Developer</role>
            </roles>
        </developer>

        <developer>
            <id/>
            <name>Graham Kirby</name>
            <email>graham.kirby@st-andrews.ac.uk</email>
            <url>https://www.st-andrews.ac.uk/computer-science/people/gnck</url>
            <organization>University of St Andrews</organization>
            <organizationUrl>https://www.st-andrews.ac.uk/</organizationUrl>
            <roles>
                <role>Developer</role>
            </roles>
        </developer>

        <developer>
            <id/>
            <name>Özgür Akgün</name>
            <email>ozgur.akgun@st-andrews.ac.uk</email>
            <url>https://www.st-andrews.ac.uk/computer-science/people/oa86/</url>
            <organization>University of St Andrews</organization>
            <organizationUrl>https://www.st-andrews.ac.uk/</organizationUrl>
            <roles>
                <role>Developer</role>
            </roles>
        </developer>
    </developers>

</project>
